fixed switcher spacing glitch

--- a/src/components/Viz.css
+++ b/src/components/Viz.css
@@ -1,5 +1,6 @@
 #viz {
   height:60vh;
+  overflow:hidden;
 }
 
 #art {
